Bug 195812 - crash when rotating image in album (rightest rotate icon)
Summary: crash when rotating image in album (rightest rotate icon)
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Database-Albums (other bugs)
Version First Reported In: 1.0.0
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-06-09 20:19 UTC by christian
Modified: 2022-01-31 11:00 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description christian 2009-06-09 20:19:13 UTC
Application that crashed: digikam
Version of the application: 1.0.0-beta2 (rev.: 979281)
KDE Version: 4.2.90 (KDE 4.2.90 (KDE 4.3 Beta2))
Qt Version: 4.5.1
Operating System: Linux 2.6.30-6-generic x86_64
Distribution: Ubuntu karmic (development branch)

What I was doing when the application crashed:
perhaps can provide image, if this is not clear

 -- Backtrace:
Application: digiKam (digikam), signal: Segmentation fault
[Current thread is 0 (LWP 13818)]

Thread 14 (Thread 0x7fcd3a2fd950 (LWP 13819)):
#0  0x00007fcd4864e2e9 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007fcd488c92b9 in QWaitCondition::wait (this=0x2847378, mutex=0x2847370, time=18446744073709551615) at /r0/k4/kdesvn/qt-copy/src/corelib/thread/qwaitcondition_unix.cpp:87
#2  0x00000000006ab7eb in Digikam::ScanController::run (this=0x2769030) at /r0/k4/kdesvn/extragear/graphics/digikam/digikam/scancontroller.cpp:455
#3  0x00007fcd488c8539 in QThreadPrivate::start (arg=0x2769030) at /r0/k4/kdesvn/qt-copy/src/corelib/thread/qthread_unix.cpp:189
#4  0x00007fcd4864a3ba in start_thread () from /lib/libpthread.so.0
#5  0x00007fcd47c091bd in clone () from /lib/libc.so.6
#6  0x0000000000000000 in ?? ()

Thread 13 (Thread 0x7fcd38795950 (LWP 13822)):
#0  0x00007fcd47bff686 in poll () from /lib/libc.so.6
#1  0x00007fcd451f9d7c in g_main_context_iterate (context=0x2eb0d20, block=<value optimized out>, dispatch=<value optimized out>, self=<value optimized out>)
    at /build/buildd/glib2.0-2.21.1/glib/gmain.c:2758
#2  0x00007fcd451fa0c0 in IA__g_main_context_iteration (context=0x2eb0d20, may_block=1) at /build/buildd/glib2.0-2.21.1/glib/gmain.c:2508
#3  0x00007fcd489c31de in QEventDispatcherGlib::processEvents (this=0x2eb0c40, flags=<value optimized out>) at /r0/k4/kdesvn/qt-copy/src/corelib/kernel/qeventdispatcher_glib.cpp:326
#4  0x00007fcd4899c3c2 in QEventLoop::processEvents (this=<value optimized out>, flags={i = 947474336}) at /r0/k4/kdesvn/qt-copy/src/corelib/kernel/qeventloop.cpp:149
#5  0x00007fcd4899c555 in QEventLoop::exec (this=0x7fcd38794fe0, flags={i = 947474416}) at /r0/k4/kdesvn/qt-copy/src/corelib/kernel/qeventloop.cpp:196
#6  0x00007fcd488c59ac in QThread::exec (this=<value optimized out>) at /r0/k4/kdesvn/qt-copy/src/corelib/thread/qthread.cpp:487
#7  0x00007fcd488c8539 in QThreadPrivate::start (arg=0x2e3b8b0) at /r0/k4/kdesvn/qt-copy/src/corelib/thread/qthread_unix.cpp:189
#8  0x00007fcd4864a3ba in start_thread () from /lib/libpthread.so.0
#9  0x00007fcd47c091bd in clone () from /lib/libc.so.6
#10 0x0000000000000000 in ?? ()

Thread 12 (Thread 0x7fcd38f96950 (LWP 13823)):
#0  0xffffffffff60017b in ?? ()
#1  0x00007fcd38f95d10 in ?? ()
#2  0x00007fffea968782 in ?? ()
Backtrace stopped: previous frame identical to this frame (corrupt stack?)

Thread 11 (Thread 0x7fcd37bd7950 (LWP 13824)):
#0  0x00007fcd4864e2e9 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007fcd488c92b9 in QWaitCondition::wait (this=0x2e98510, mutex=0x2e98508, time=18446744073709551615) at /r0/k4/kdesvn/qt-copy/src/corelib/thread/qwaitcondition_unix.cpp:87
#2  0x00007fcd4c122c32 in Digikam::LoadSaveThread::run (this=0x2e984f0) at /r0/k4/kdesvn/extragear/graphics/digikam/libs/threadimageio/loadsavethread.cpp:136
#3  0x00007fcd488c8539 in QThreadPrivate::start (arg=0x2e984f0) at /r0/k4/kdesvn/qt-copy/src/corelib/thread/qthread_unix.cpp:189
#4  0x00007fcd4864a3ba in start_thread () from /lib/libpthread.so.0
#5  0x00007fcd47c091bd in clone () from /lib/libc.so.6
#6  0x0000000000000000 in ?? ()

Thread 10 (Thread 0x7fcd373d6950 (LWP 13825)):
#0  0x00007fcd4864e2e9 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007fcd488c92b9 in QWaitCondition::wait (this=0x2f21aa0, mutex=0x2f21a98, time=18446744073709551615) at /r0/k4/kdesvn/qt-copy/src/corelib/thread/qwaitcondition_unix.cpp:87
#2  0x00007fcd4c122c32 in Digikam::LoadSaveThread::run (this=0x2f21a80) at /r0/k4/kdesvn/extragear/graphics/digikam/libs/threadimageio/loadsavethread.cpp:136
#3  0x00007fcd488c8539 in QThreadPrivate::start (arg=0x2f21a80) at /r0/k4/kdesvn/qt-copy/src/corelib/thread/qthread_unix.cpp:189
#4  0x00007fcd4864a3ba in start_thread () from /lib/libpthread.so.0
#5  0x00007fcd47c091bd in clone () from /lib/libc.so.6
#6  0x0000000000000000 in ?? ()

Thread 9 (Thread 0x7fcd2fd3b950 (LWP 13826)):
#0  0x00007fcd4864e56d in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007fcd34c52f91 in metronom_sync_loop (this=0x318d410) at metronom.c:870
#2  0x00007fcd4864a3ba in start_thread () from /lib/libpthread.so.0
#3  0x00007fcd47c091bd in clone () from /lib/libc.so.6
#4  0x0000000000000000 in ?? ()

Thread 8 (Thread 0x7fcd2d62c950 (LWP 13827)):
#0  0x00007fcd47c01932 in select () from /lib/libc.so.6
#1  0x00007fcd34c7c0a4 in xine_usec_sleep (usec=<value optimized out>) at utils.c:481
#2  0x00007fcd34c60deb in video_out_loop (this_gen=<value optimized out>) at video_out.c:1246
#3  0x00007fcd4864a3ba in start_thread () from /lib/libpthread.so.0
#4  0x00007fcd47c091bd in clone () from /lib/libc.so.6
#5  0x0000000000000000 in ?? ()

Thread 7 (Thread 0x7fcd2ce2b950 (LWP 13828)):
#0  0x00007fcd47bff686 in poll () from /lib/libc.so.6
#1  0x00007fcd451f9d7c in g_main_context_iterate (context=0x31c89f0, block=<value optimized out>, dispatch=<value optimized out>, self=<value optimized out>)
    at /build/buildd/glib2.0-2.21.1/glib/gmain.c:2758
#2  0x00007fcd451fa0c0 in IA__g_main_context_iteration (context=0x31c89f0, may_block=1) at /build/buildd/glib2.0-2.21.1/glib/gmain.c:2508
#3  0x00007fcd489c31de in QEventDispatcherGlib::processEvents (this=0x3191490, flags=<value optimized out>) at /r0/k4/kdesvn/qt-copy/src/corelib/kernel/qeventdispatcher_glib.cpp:326
#4  0x00007fcd4899c3c2 in QEventLoop::processEvents (this=<value optimized out>, flags={i = 753053520}) at /r0/k4/kdesvn/qt-copy/src/corelib/kernel/qeventloop.cpp:149
#5  0x00007fcd4899c555 in QEventLoop::exec (this=0x7fcd2ce2af90, flags={i = 753053600}) at /r0/k4/kdesvn/qt-copy/src/corelib/kernel/qeventloop.cpp:196
#6  0x00007fcd488c59ac in QThread::exec (this=<value optimized out>) at /r0/k4/kdesvn/qt-copy/src/corelib/thread/qthread.cpp:487
#7  0x00007fcd34eaebce in Phonon::Xine::XineThread::run (this=0x31c82e0) at /r0/k4/kdesvn/kdesupport/phonon/xine/xinethread.cpp:143
#8  0x00007fcd488c8539 in QThreadPrivate::start (arg=0x31c82e0) at /r0/k4/kdesvn/qt-copy/src/corelib/thread/qthread_unix.cpp:189
#9  0x00007fcd4864a3ba in start_thread () from /lib/libpthread.so.0
#10 0x00007fcd47c091bd in clone () from /lib/libc.so.6
#11 0x0000000000000000 in ?? ()

Thread 6 (Thread 0x7fcd28218950 (LWP 13834)):
#0  0x00007fcd47bff686 in poll () from /lib/libc.so.6
#1  0x00007fcd2c425969 in ao_alsa_handle_event_thread (data=<value optimized out>) at audio_alsa_out.c:150
#2  0x00007fcd4864a3ba in start_thread () from /lib/libpthread.so.0
#3  0x00007fcd47c091bd in clone () from /lib/libc.so.6
#4  0x0000000000000000 in ?? ()

Thread 5 (Thread 0x7fcd2c013950 (LWP 13835)):
#0  0x00007fcd4864e2e9 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007fcd34c64353 in ao_loop (this_gen=<value optimized out>) at audio_out.c:348
#2  0x00007fcd4864a3ba in start_thread () from /lib/libpthread.so.0
#3  0x00007fcd47c091bd in clone () from /lib/libc.so.6
#4  0x0000000000000000 in ?? ()

Thread 4 (Thread 0x7fcd29198950 (LWP 13851)):
#0  0x00007fcd4864e2e9 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007fcd488c92b9 in QWaitCondition::wait (this=0x37b6be0, mutex=0x37b6bd8, time=18446744073709551615) at /r0/k4/kdesvn/qt-copy/src/corelib/thread/qwaitcondition_unix.cpp:87
#2  0x00007fcd4c122c32 in Digikam::LoadSaveThread::run (this=0x37b6bc0) at /r0/k4/kdesvn/extragear/graphics/digikam/libs/threadimageio/loadsavethread.cpp:136
#3  0x00007fcd488c8539 in QThreadPrivate::start (arg=0x37b6bc0) at /r0/k4/kdesvn/qt-copy/src/corelib/thread/qthread_unix.cpp:189
#4  0x00007fcd4864a3ba in start_thread () from /lib/libpthread.so.0
#5  0x00007fcd47c091bd in clone () from /lib/libc.so.6
#6  0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7fcd21f4e950 (LWP 13858)):
#0  0x00007fcd47bff686 in poll () from /lib/libc.so.6
#1  0x00007fcd451f9d7c in g_main_context_iterate (context=0x696a160, block=<value optimized out>, dispatch=<value optimized out>, self=<value optimized out>)
    at /build/buildd/glib2.0-2.21.1/glib/gmain.c:2758
#2  0x00007fcd451fa0c0 in IA__g_main_context_iteration (context=0x696a160, may_block=1) at /build/buildd/glib2.0-2.21.1/glib/gmain.c:2508
#3  0x00007fcd489c31de in QEventDispatcherGlib::processEvents (this=0x6992660, flags=<value optimized out>) at /r0/k4/kdesvn/qt-copy/src/corelib/kernel/qeventdispatcher_glib.cpp:326
#4  0x00007fcd4899c3c2 in QEventLoop::processEvents (this=<value optimized out>, flags={i = 569696160}) at /r0/k4/kdesvn/qt-copy/src/corelib/kernel/qeventloop.cpp:149
#5  0x00007fcd4899c555 in QEventLoop::exec (this=0x7fcd21f4dfe0, flags={i = 569696240}) at /r0/k4/kdesvn/qt-copy/src/corelib/kernel/qeventloop.cpp:196
#6  0x00007fcd488c59ac in QThread::exec (this=<value optimized out>) at /r0/k4/kdesvn/qt-copy/src/corelib/thread/qthread.cpp:487
#7  0x00007fcd488c8539 in QThreadPrivate::start (arg=0x698d080) at /r0/k4/kdesvn/qt-copy/src/corelib/thread/qthread_unix.cpp:189
#8  0x00007fcd4864a3ba in start_thread () from /lib/libpthread.so.0
#9  0x00007fcd47c091bd in clone () from /lib/libc.so.6
#10 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7fcd2274f950 (LWP 13859)):
#0  0x00007fcd47bff686 in poll () from /lib/libc.so.6
#1  0x00007fcd451f9d7c in g_main_context_iterate (context=0x6992010, block=<value optimized out>, dispatch=<value optimized out>, self=<value optimized out>)
    at /build/buildd/glib2.0-2.21.1/glib/gmain.c:2758
#2  0x00007fcd451fa0c0 in IA__g_main_context_iteration (context=0x6992010, may_block=1) at /build/buildd/glib2.0-2.21.1/glib/gmain.c:2508
#3  0x00007fcd489c31de in QEventDispatcherGlib::processEvents (this=0x6992b70, flags=<value optimized out>) at /r0/k4/kdesvn/qt-copy/src/corelib/kernel/qeventdispatcher_glib.cpp:326
#4  0x00007fcd4899c3c2 in QEventLoop::processEvents (this=<value optimized out>, flags={i = 578088864}) at /r0/k4/kdesvn/qt-copy/src/corelib/kernel/qeventloop.cpp:149
#5  0x00007fcd4899c555 in QEventLoop::exec (this=0x7fcd2274efe0, flags={i = 578088944}) at /r0/k4/kdesvn/qt-copy/src/corelib/kernel/qeventloop.cpp:196
#6  0x00007fcd488c59ac in QThread::exec (this=<value optimized out>) at /r0/k4/kdesvn/qt-copy/src/corelib/thread/qthread.cpp:487
#7  0x00007fcd488c8539 in QThreadPrivate::start (arg=0x69921a0) at /r0/k4/kdesvn/qt-copy/src/corelib/thread/qthread_unix.cpp:189
#8  0x00007fcd4864a3ba in start_thread () from /lib/libpthread.so.0
#9  0x00007fcd47c091bd in clone () from /lib/libc.so.6
#10 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fcd4ede0760 (LWP 13818)):
[KCrash Handler]
#5  QMutex::lock (this=0x48) at /r0/k4/kdesvn/qt-copy/src/corelib/thread/qmutex.cpp:152
#6  0x00007fcd4c0c7ec4 in ThumbnailDatabaseAccess (this=<value optimized out>) at /r0/k4/kdesvn/extragear/graphics/digikam/libs/database/thumbnaildatabaseaccess.cpp:89
#7  0x00007fcd4c138a4d in Digikam::ThumbnailCreator::deleteFromDatabase (this=<value optimized out>, info=@0x7fffea92f3a0)
    at /r0/k4/kdesvn/extragear/graphics/digikam/libs/threadimageio/thumbnailcreator.cpp:533
#8  0x00007fcd4c13ccdf in Digikam::ThumbnailCreator::deleteThumbnailsFromDisk (this=0x7fffea92f430, filePath=@0x7fffea92f500)
    at /r0/k4/kdesvn/extragear/graphics/digikam/libs/threadimageio/thumbnailcreator.cpp:238
#9  0x00007fcd4c13d2de in Digikam::ThumbnailLoadThread::deleteThumbnail (filePath=@0x7fffea92f500) at /r0/k4/kdesvn/extragear/graphics/digikam/libs/threadimageio/thumbnailloadthread.cpp:506
#10 0x000000000054b29b in Digikam::KipiInterface::refreshImages (this=<value optimized out>, urls=<value optimized out>)
    at /r0/k4/kdesvn/extragear/graphics/digikam/utilities/kipiiface/kipiinterface.cpp:163
#11 0x00007fcd1d0986e1 in Plugin_JPEGLossless::slotCancel (this=0x81594a0) at /r0/k4/kdesvn/extragear/graphics/kipi-plugins/jpeglossless/plugin_jpeglossless.cpp:323
#12 0x00007fcd1d098870 in Plugin_JPEGLossless::oneTaskCompleted (this=0x81594a0) at /r0/k4/kdesvn/extragear/graphics/kipi-plugins/jpeglossless/plugin_jpeglossless.cpp:446
#13 0x00007fcd1d098ea5 in Plugin_JPEGLossless::slotFinished (this=0x81594a0, filePath=<value optimized out>, action=<value optimized out>)
    at /r0/k4/kdesvn/extragear/graphics/kipi-plugins/jpeglossless/plugin_jpeglossless.cpp:387
#14 0x00007fcd1d099f48 in Plugin_JPEGLossless::qt_metacall (this=0x81594a0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x8bcaeb0)
    at /r0/k4/kdesvn/build/extragear/graphics/kipi-plugins/jpeglossless/plugin_jpeglossless.moc:92
#15 0x00007fcd489ac981 in QObject::event (this=0x81594a0, e=0x8d766b0) at /r0/k4/kdesvn/qt-copy/src/corelib/kernel/qobject.cpp:1106
#16 0x00007fcd4953251d in QApplicationPrivate::notify_helper (this=0x266f860, receiver=0x81594a0, e=0x8d766b0) at /r0/k4/kdesvn/qt-copy/src/gui/kernel/qapplication.cpp:4057
#17 0x00007fcd4953af6a in QApplication::notify (this=0x7fffea9300f0, receiver=0x81594a0, e=0x8d766b0) at /r0/k4/kdesvn/qt-copy/src/gui/kernel/qapplication.cpp:4022
#18 0x00007fcd4a8509a6 in KApplication::notify (this=0x7fffea9300f0, receiver=0x81594a0, event=0x8d766b0) at /r0/k4/kdesvn/kdelibs/kdeui/kernel/kapplication.cpp:302
#19 0x00007fcd4899da1c in QCoreApplication::notifyInternal (this=0x7fffea9300f0, receiver=0x81594a0, event=0x8d766b0) at /r0/k4/kdesvn/qt-copy/src/corelib/kernel/qcoreapplication.cpp:606
#20 0x00007fcd4899e398 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x263c820) at ../../include/QtCore/../../../../qt-copy/src/corelib/kernel/qcoreapplication.h:213
#21 0x00007fcd489c3523 in postEventSourceDispatch (s=<value optimized out>) at ../../include/QtCore/../../../../qt-copy/src/corelib/kernel/qcoreapplication.h:218
#22 0x00007fcd451f68be in IA__g_main_context_dispatch (context=0x26721f0) at /build/buildd/glib2.0-2.21.1/glib/gmain.c:1814
#23 0x00007fcd451f9f98 in g_main_context_iterate (context=0x26721f0, block=<value optimized out>, dispatch=<value optimized out>, self=<value optimized out>)
    at /build/buildd/glib2.0-2.21.1/glib/gmain.c:2445
#24 0x00007fcd451fa0c0 in IA__g_main_context_iteration (context=0x26721f0, may_block=1) at /build/buildd/glib2.0-2.21.1/glib/gmain.c:2508
#25 0x00007fcd489c31bf in QEventDispatcherGlib::processEvents (this=0x263c440, flags=<value optimized out>) at /r0/k4/kdesvn/qt-copy/src/corelib/kernel/qeventdispatcher_glib.cpp:324
#26 0x00007fcd495b95af in QGuiEventDispatcherGlib::processEvents (this=0x48, flags=<value optimized out>) at /r0/k4/kdesvn/qt-copy/src/gui/kernel/qguieventdispatcher_glib.cpp:202
#27 0x00007fcd4899c3c2 in QEventLoop::processEvents (this=<value optimized out>, flags={i = -359465024}) at /r0/k4/kdesvn/qt-copy/src/corelib/kernel/qeventloop.cpp:149
#28 0x00007fcd4899c555 in QEventLoop::exec (this=0x7fffea930000, flags={i = -359464944}) at /r0/k4/kdesvn/qt-copy/src/corelib/kernel/qeventloop.cpp:196
#29 0x00007fcd4899e60c in QCoreApplication::exec () at /r0/k4/kdesvn/qt-copy/src/corelib/kernel/qcoreapplication.cpp:888
#30 0x00000000006e0c32 in main (argc=<value optimized out>, argv=<value optimized out>) at /r0/k4/kdesvn/extragear/graphics/digikam/digikam/main.cpp:184

Reported using DrKonqi
Comment 1 caulier.gilles 2009-06-09 21:14:46 UTC
Marcel,

Look like the crash appears in new thumbs database code :

#5  QMutex::lock (this=0x48) at
/r0/k4/kdesvn/qt-copy/src/corelib/thread/qmutex.cpp:152
#6  0x00007fcd4c0c7ec4 in ThumbnailDatabaseAccess (this=<value optimized out>)
at
/r0/k4/kdesvn/extragear/graphics/digikam/libs/database/thumbnaildatabaseaccess.cpp:89
Comment 2 Marcel Wiesweg 2009-06-09 22:51:14 UTC
SVN commit 979464 by mwiesweg:

Unfinished code came into use accidentally - missing "break" in switch

BUG: 195812

 M  +1 -0      thumbnailcreator.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=979464