Unfinished code came into use accidentally - missing "break" in switch

BUG: 195812

svn path=/trunk/extragear/graphics/digikam/; revision=979464